# simple-api-rust

./: Cargo.toml
src/: main.rs
